--- a/package.json
+++ b/package.json
@@ -15,15 +15,26 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@hapi/iron": "^6.0.0",
+    "@magic-sdk/admin": "^1.3.4",
+    "@magiclabs/ui": "^0.24.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "cookie": "^0.4.2",
+    "faunadb": "^4.5.0",
     "gatsby": "^4.6.1",
     "gatsby-plugin-image": "^2.6.0",
     "gatsby-plugin-mdx": "^3.6.0",
     "gatsby-plugin-sharp": "^4.6.0",
     "gatsby-source-filesystem": "^4.6.0",
     "gatsby-transformer-sharp": "^4.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "magic-sdk": "^8.0.1",
+    "node-fetch": "^2.6.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "gatsby-plugin-root-import": "^2.0.8"
   }
 }
